--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .menuIcon, .animatedMenuIcon{
     width:45px;
     margin: 50px auto;
@@ -23,4 +27,28 @@
 
 .bar.below {
     transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.icon-bar {
+    width: 100%;
+    background-color: #555;
+    overflow:auto;/* Overflow due to float */
+}
+
+.icon-bar a {
+    float:left;
+    text-align:center;
+    width:20%;
+    padding:12px 0;
+    transition: all 0.3s ease;
+    color:white;
+    font-size:36px;
+}
+
+.icon-bar a:hover {
+    background-color: #000;
+}
+
+.active {
+    background-color: #4CAF50;
 }
