試著改用 flex 排版來製作選單

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,13 +32,12 @@ body {
 .icon-bar {
     width: 100%;
     background-color: #555;
-    overflow:auto;/* Overflow due to float */
+    display:flex;
 }
 
 .icon-bar a {
-    float:left;
+    flex:1;
     text-align:center;
-    width:20%;
     padding:12px 0;
     transition: all 0.3s ease;
     color:white;
