完成基本版的折疊元件 Accordion

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,48 @@ body {
     background-color: #000;
 }
 
-.active {
+.icon-bar a.active {
     background-color: #4CAF50;
+}
+
+.accordion .sectionName, .accordion .section {
+    width:100%;
+}
+
+.accordion .sectionName {
+    background-color: #eee;
+    color: #444;
+    border: none;
+    outline: none;/* 若不取消 outline, 那點擊 button 的時候就會出現點選的痕跡 */
+    text-align:left;
+    padding: 18px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.accordion .sectionName:hover, .accordion.active {
+    background-color: #ccc;
+}
+
+.accordion .sectionName:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    /*margin-left: 5px;*//*官方範例上說的...用途不明*/
+}
+
+.accordion .sectionName.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+.accordion .section {
+    padding: 18px auto;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+
+.accordion .section.active {
+    display:block;
 }
