--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+.widget {
+    margin-bottom:50px;
+}
+
 .menuIcon, .animatedMenuIcon{
     width:45px;
     margin: 50px auto;
@@ -87,5 +91,29 @@ body {
     padding: 18px auto;
     background-color: white;
     overflow: hidden;
-    /*transition: max-height 0.2s ease-out;*/
+    transition: max-height 0.2s ease-out;
+}
+
+.topNav {
+    background-color: #333;
+    overflow:hidden;/*官方教學提到的, 不知道為什麼需要這個*/
+}
+
+.topNav a{
+    float:left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topNav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topNav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
