--- a/src/css/style.css
+++ b/src/css/style.css
@@ -166,3 +166,36 @@ body {
       display:flex;
     }
 }
+
+.articleWithSideBar {
+    position:relative;
+    top:0;
+    left:0;
+    width:100%;
+    height:300px;
+}
+
+.articleWithSideBar .content {
+    position:relative;
+    top:0;
+    left:0;
+    width:70%;
+    overflow:scroll;
+    background-color: #eee;
+    
+}
+
+.articleWithSideBar .sidebar {
+    width:30%;
+    height:100%;
+    position:absolute;
+    top:0;
+    right:0;    
+    background-color:black;
+    padding:15px;
+}
+
+.articleWithSideBar .sidebar a{
+    text-decoration: none;
+    color:white;
+}
