--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,9 +97,18 @@ body {
 .topNav {
     background-color: #333;
     overflow:hidden;/*官方教學提到的, 不知道為什麼需要這個*/
+    width:100%;
 }
 
-.topNav a{
+.sticky {
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:10;
+}
+
+.topNav > a{
+    display:block;
     float:left;
     color: #f2f2f2;
     text-align: center;
@@ -141,7 +150,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-    .topNav a:not(:first-child), .topNav .search-container:not(:first-child) { display:none; }
+    .topNav a:not(:first-child), .topNav .search-container/*:not(:first-child)*/ { display:none; }
     .topNav a.icon {
         float:right;
         display:block;
@@ -164,7 +173,7 @@ body {
     }
     .topNav.responsive .search-container {
       display:flex;
-    }
+    }/*上面第一條 media query 已經讓 .search-container 消失, 接下來要在選單套用 responsive 時再次套用 display:flex 才能讓它以正常的排版顯示 */
 }
 
 .articleWithSideBar {
@@ -198,4 +207,12 @@ body {
 .articleWithSideBar .sidebar a{
     text-decoration: none;
     color:white;
+}
+
+.header {
+    width:100%;
+    height:100px;
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align: center;
 }
