--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,6 +220,9 @@ body {
 .hoverableDropdown, .clickableDropdown {
     margin-left:20px;/*為按鈕左邊留點空間比較好按*/
     display:inline-block;
+    position:relative;
+    top:0;
+    left:0;
 }
 
 .hoverable {
@@ -246,6 +249,9 @@ body {
     box-shadow:2px 2px 2px 1px rgba(0, 0, 0, 0.2) ;
     display:none;
     text-align:center;
+    position:absolute;
+    top:100%;
+    left:0;
 }
 
 .dropdown a {
