--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,22 +107,30 @@ body {
     z-index:10;
 }
 
-.topNav > a{
-    display:block;
+.topNav .topNavMenu{
     float:left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    position:relative;
+    top:0;
+    left:0;
+    background-color:inherit;
 }
 
-.topNav a:hover {
+.topNav .dropdownMenu {
+    border:none;
+    cursor:pointer;
+}
+
+.topNav .topNavMenu:hover, .topNav a.icon {
     background-color: #ddd;
     color: black;
 }
 
-.topNav a.active {
+.topNav .topNavMenu.active, .topNav a.icon {
     background-color: #4CAF50;
     color: white;
 }
@@ -150,7 +158,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-    .topNav a:not(:first-child), .topNav .search-container/*:not(:first-child)*/ { display:none; }
+    .topNav .topNavMenu:not(:first-child), .topNav .search-container/*:not(:first-child)*/ { display:none; }
     .topNav a.icon {
         float:right;
         display:block;
@@ -164,11 +172,11 @@ body {
       right: 0;
       top: 0;
     }
-    .topNav.responsive a, .topNav.responsive .search-container {
+    .topNav.responsive .topNavMenu, .topNav.responsive .search-container {
       float: none;
       text-align: left;
     }
-    .topNav.responsive a {
+    .topNav.responsive .topNavMenu {
       display: block;
     }
     .topNav.responsive .search-container {
@@ -245,7 +253,7 @@ body {
 .dropdown {
     padding-top:10px; /*為選單上方留點空白以免太壓迫*/
     min-width:100%; /*讓選單至少等長於按鈕, 這樣看起來才不會太弱*/
-    background-color:lightgray;
+    background-color:gray;
     box-shadow:2px 2px 2px 1px rgba(0, 0, 0, 0.2) ;
     display:none;
     text-align:center;
