--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,8 +96,8 @@ body {
 
 .topNav {
     background-color: #333;
-    overflow:hidden;/*官方教學提到的, 不知道為什麼需要這個*/
     width:100%;
+    display:flex;
 }
 
 .sticky {
@@ -108,16 +108,20 @@ body {
 }
 
 .topNav .topNavMenu{
-    float:left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 16px;
     position:relative;
     top:0;
     left:0;
     background-color:inherit;
+    flex:1;
+}
+
+.topNav .topNavPlaceholder {
+    flex:5;
 }
 
 .topNav .dropdownMenu {
