--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,8 +222,8 @@ body {
 }
 
 .header {
-    width:100%;
     height:100px;
+    width:auto;
     background-color: #f1f1f1;
     padding: 30px;
     text-align: center;
