--- a/src/css/style.css
+++ b/src/css/style.css
@@ -514,3 +514,14 @@ body.modal-open {
 .imageOverlayTitle .titleBox.active {
     opacity:0.7;
 }
+
+.thumbnailImage {
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px;  /* Rounded border */
+    padding: 5px; /* Some padding */
+    width: 150px; /* Set a small width */
+}
+
+.thumbnailImage:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
