--- a/src/css/offCanvasMenuLayout-style.css
+++ b/src/css/offCanvasMenuLayout-style.css
@@ -52,3 +52,51 @@ body {
 .offCanvasLayout .content.active {
     margin-left:20%;
 }
+
+.teamPresentation {
+    display:flex;
+    justify-content: center;
+}
+
+.teamMember {
+    max-width:300px;
+    margin:20px 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    flex:1;
+}
+
+.teamMember img {
+    width:100%;
+    max-height:45%;
+    overflow-y:hidden;
+}
+
+.teamMember .name, .teamMember .jobTitle, .teamMember p {
+    margin:10px 0;
+    padding-left:10px;
+}
+
+.teamMember .jobTitle{
+    color:gray;
+}
+
+.teamMember .contactPanel {
+    text-align:center;
+}
+
+.teamMember .contactBtn {
+    margin:10px auto;
+    padding:10px;
+    min-width:60%;
+    border:none;
+    box-sizing:border-box;
+    text-align:center;
+    color:white;
+    background-color:#555;
+    cursor:pointer;
+    border-radius:2px;
+}
+
+.teamMember .contactBtn:hover {
+    background-color: darkgray;
+}
