--- a/src/css/style.css
+++ b/src/css/style.css
@@ -592,3 +592,42 @@ body.modal-open {
     max-width:150px;
     background-color:#f4511e;
 }
+
+.socialMedia {
+    width:50%;
+    margin:inherit auto;
+    display:flex;
+    justify-content: space-between;
+}
+
+.socialMedia .fa {
+    width: 30px;
+    padding:5px;
+    font-size:20px;
+    text-align: center;
+    text-decoration:none;
+}
+
+.fa:hover {
+    opacity:0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
