--- a/src/css/style.css
+++ b/src/css/style.css
@@ -631,3 +631,21 @@ body.modal-open {
     background: #dd4b39;
     color: white;
 }
+
+.scrollToTop {
+    max-width:100px;
+    background-color:yellowgreen;
+    color:white;
+    padding:5px 10px;
+    border-radius:3px;
+    display:none;
+    position:fixed;
+    bottom:5%;
+    right:5%;
+    cursor:pointer;
+    opacity:0.8;
+}
+
+.scrollToTop.active {
+    display:block;
+}
