增加彈跳式登入選單以及工作歷程表

--- a/src/css/portfolio-style.css
+++ b/src/css/portfolio-style.css
@@ -60,3 +60,283 @@ body {
 .portfolio .spotlight-case .case-study img {
     opacity:0.8;
 }
+
+button.login {
+    outline:none;
+    border:none;
+    background-color:yellowgreen;
+    color:white;
+    padding:5px 10px;
+    border-radius:2px;
+    cursor:pointer;
+}
+
+.loginFormBackground {
+    background-color:rgba(0,0,0, 0.7);
+    position:fixed;
+    top:0;
+    left:0;
+    width:100vw;
+    height:100vh;
+    display:none;
+}
+
+.loginFormBackground.active, .loginForm.active {
+    display:block;
+}
+
+.loginForm {
+    background-color:white;
+    width:40%;
+    padding:0 5px 3px 5px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    z-index:10;
+    display:none;
+}
+
+.loginForm > div, .loginForm > legend {
+    width:100%;
+}
+
+.loginForm > * {
+    margin:5px 0;
+}
+
+.loginForm .controlPanel {
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+.loginForm .closeBtn {
+    color:black;
+    text-align:center;
+    padding:5px 10px;
+    cursor:pointer;
+}
+
+.loginForm .closeBtn:hover {
+    background-color:darkgray;
+}
+
+.loginForm img {
+    display:block;
+    margin:0 auto;
+    border-radius:50%;
+    width:40%;
+}
+
+.loginForm fieldset {
+    padding:1%;
+}
+
+.loginForm label {
+    font-size:14px;
+    text-align:left;
+}
+
+.loginForm input[type=text], .loginForm input[type=password] {
+    border:1px solid #ccc;
+    padding:6px 10px;
+    display:block;
+    width:100%;
+    box-sizing:border-box;
+    margin:6px 0;
+}
+
+.loginForm button {
+    outline:none;
+    border:none;
+    cursor:pointer;
+    color:white;
+    padding:14px 20px;
+    box-sizing:border-box;
+    cursor:pointer;
+    text-align:center;
+}
+
+.loginForm button:hover {
+    opacity:0.8;
+}
+
+.loginForm .submitBtn {
+    width:100%;
+    background-color: #4CAF50;
+}
+
+.loginForm .optionsPanel {
+    display:flex;
+    justify-content: space-between;
+}
+
+.loginForm .cancelBtn {
+    background-color: #f44336;
+}
+
+.loginForm .pwRecovery {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.devFootPrint {
+    background-color:gray;
+    width:100%;
+    height:600px;
+    position:relative;
+    top:0;
+    left:0;
+  }
+  
+  .devFootPrint .timeline {
+    background-color:white;
+    width:5px;
+    height:600px;
+    border-width:0 5px;
+    border-style:solid;
+    border-color:lightgray;
+    position:absolute;
+    top:0;
+    left:50%;
+    transform:translateX(-50%);
+  }
+  
+  .devFootPrint .timestamp {
+    --diameter:18px;
+    width:var(--diameter);
+    height:var(--diameter);
+    border-radius:50%;
+    border-style:solid;
+    border-width:4px;
+    border-color:orange;
+    background-color:white;
+    transform:translateX(-10px);
+    position:absolute;
+  }
+  
+  .devFootPrint .arrow {
+    border-style:solid;
+    border-color:white;
+    border-width:10px;
+    z-index:10;
+  }
+  
+  .devFootPrint .arrow.left {
+    border-color:transparent transparent transparent white;
+    position:absolute;
+    left:-25px;
+  }
+  
+  .devFootPrint .arrow.right {
+    border-color:transparent white transparent transparent;
+    position:absolute;
+    right:-25px;
+  }
+  
+  .devFootPrint .dialog {
+    background-color:white;
+    width:275px;
+    height:150px;
+    padding:5px 10px;
+    box-sizing:border-box;
+    border-radius:5px;
+    overflow:hidden;
+    box-shadow:0 2px 2px 0 rgba(0,0,0, 0.8);
+   
+    display:flex;
+    flex-direction:column;
+  }
+  
+  .devFootPrint .dialog.left {
+    position:absolute;
+    top:-10px;
+    left:-299px;
+  }
+  
+  .devFootPrint .dialog.right {
+    position:absolute;
+    top:-10px;
+    right:-299px;
+  }
+  
+  .devFootPrint .dialog > *:not(:last-child) {
+     margin-top:0;
+     margin-bottom:8px;
+  }
+  
+  .devFootPrint .dialog .storyName {
+    flex:2;
+    border-width:0 0 1px 0;
+    border-style:solid;
+    border-color:#C8C8C8;
+    text-align:center;
+    vertical-align:middle;
+  }
+  
+  .devFootPrint .dialog .story {
+    flex:5;
+    font-size:12px;
+  }
+  
+  .devFootPrint .dialog .story-foot {
+    flex:2;
+    font-size:10px;
+    display:flex;
+  }
+  
+  .devFootPrint .story-foot .storyCatagory {
+    flex:7;
+    display:flex;
+    justify-content:left;
+  }
+  
+  .devFootPrint .storyCatagory .description {
+    font-size:12px;
+  }
+  
+  .devFootPrint .story-foot .learnMore {
+    flex:3;
+    text-align:right;
+  }
+  
+  .devFootPrint .storyCatagory > *,
+  .devFootPrint .learnMore {
+    display:table;
+  }
+  
+  .devFootPrint .storyCatagory > * {
+    padding:5px;  
+  }
+  
+  .devFootPrint .storyCatagory .catagory {
+    margin-right:5px;
+    border-radius:3px;
+    cursor:pointer;
+    text-align:center;
+    box-shadow:0 1px 2px 0 rgba(0,0,0,0.8);
+  }
+  
+  .devFootPrint .storyCatagory .catagory.none {
+      background-color:lightblue;
+  }
+
+  .devFootPrint .storyCatagory .catagory.red {
+    background-color:#FF3333;
+  }
+  
+  .devFootPrint .storyCatagory .catagory.orange {
+    background-color:#FF6633;
+  }
+  
+  .storyCatagory .catagory.green {
+    background-color:yellowgreen;
+  }
+    
+  .devFootPrint .learnMore span {
+    padding:5px;
+    display:table-cell;
+    vertical-align:middle;
+  }
+  
